<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="miha.calculator.MainActivity">



    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_x_2"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/x2"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="26dp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/x"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="26dp"
        android:inputType="numberDecimal|numberSigned"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/nox"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginStart="215dp"
        android:layout_marginTop="26dp"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resquad"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/ok"
        android:id="@+id/buttonOKquad"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals_0"
        android:textSize="11sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="310dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/quit"
        android:id="@+id/buttonQuietQuadr"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_x" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonResetQuad"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_num"
        android:layout_marginTop="10dp"
        android:layout_marginStart="215dp"/>
</RelativeLayout>
